--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,6 @@
 @charset 'utf-8';
+
+/* init */
 * {
 	margin: 0px;
 	padding: 0px;
@@ -10,4 +12,68 @@ ol {
 }
 a {
 	text-decoration: none;
+}
+
+/* header */
+header {
+	width: 100%;
+	border-bottom: 1px solid #ddd;
+}
+header .inner {
+	width: 1180px;
+	height: 120px;
+	margin: 0px auto;
+	position: relative;
+}
+header .inner h1 {
+	position: absolute;
+	left: 0px;
+	bottom: 15px;
+}
+header .inner h1 a {
+	font: bold 24px/1 "arial";
+	color: #444;
+}
+header .inner .util {
+	position: absolute;
+	top: 20px;
+	right: 30px;
+}
+header .inner .util li {
+	float: left;
+}
+header .inner .util li a {
+	display: block;
+	font: 12px/1 "arial";
+	color: #999;
+	padding: 0px 10px;
+}
+header .inner #gnb {
+	position: absolute;
+	bottom: 0px;
+	right: 0px;
+}
+header .inner #gnb li {
+	float: left;
+}
+header .inner #gnb li a {
+	display: block;
+	font: bold 15px/1 "arial";
+	color: #555;
+	padding: 20px 40px;
+	transition: all 0.5s;
+}
+header .inner #gnb li a:hover {
+	background: #555;
+	color: #fff;
+}
+
+/* visual */
+figure {
+	width: 100%;
+	height: calc(100vh - 120px);
+	background: #000;
+	position: relative;
+	overflow: hidden;
+	padding-top: 250px;
 }
